--- a/app.json
+++ b/app.json
@@ -29,7 +29,7 @@
     },
     "extra": {
       "eas": {
-        "projectId": "742b0e00-3d40-4db9-8941-e20e32530e78"
+        // "projectId": "742b0e00-3d40-4db9-8941-e20e32530e78"
       }
     }
   }
