--- a/app.json
+++ b/app.json
@@ -29,8 +29,12 @@
     },
     "extra": {
       "eas": {
-        // "projectId": "742b0e00-3d40-4db9-8941-e20e32530e78"
+        "projectId": "e2f8b2b3-e2b2-4522-830c-fab1e0fc8821"
       }
     }
+  },
+  "react-native-google-mobile-ads": {
+    "android_app_id": "ca-app-pub-5141446489399410~2069204103",
+    "ios_app_id": "ca-app-pub-5141446489399410~9219321410"
   }
 }
