--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "expo-dev-client": "~2.4.12"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
