--- a/package.json
+++ b/package.json
@@ -10,16 +10,29 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/native-stack": "^6.9.17",
     "expo": "~49.0.15",
     "expo-build-properties": "~0.8.3",
     "expo-dev-client": "~2.4.12",
     "expo-status-bar": "~1.6.0",
+    "nativewind": "^2.0.11",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-gesture-handler": "^2.14.0",
     "react-native-google-mobile-ads": "^12.4.0",
+    "react-native-onboarding-swiper": "^1.2.0",
+    "react-native-reanimated": "^3.6.1",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-web": "~0.19.6"
+    "react-native-safe-area-context": "^4.7.4",
+    "react-native-screens": "~3.22.0",
+    "react-native-web": "~0.19.6",
+    "react-navigation": "^5.0.0",
+    "tailwindcss": "^3.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
