--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/webpack-config": "^19.0.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "expo": "~49.0.15",
     "expo-build-properties": "~0.8.3",
     "expo-dev-client": "~2.4.12",
@@ -19,7 +20,8 @@
     "react-native": "0.72.6",
     "react-native-google-mobile-ads": "^12.4.0",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "typed-async-storage": "^3.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
