--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "react-native-google-mobile-ads": "^12.4.0",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^4.8.1",
+    "react-native-screens": "^3.29.0",
     "react-native-web": "~0.19.6",
     "typed-async-storage": "^3.1.2"
   },
