--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo": "~49.0.15",
     "expo-build-properties": "~0.8.3",
     "expo-dev-client": "~2.4.12",
+    "expo-media-library": "~15.4.1",
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -22,6 +23,10 @@
     "react-native-google-mobile-ads": "^12.4.0",
     "react-native-onboarding-swiper": "^1.2.0",
     "react-native-responsive-screen": "^1.4.2",
+    "react-native-safe-area-context": "^4.8.1",
+    "react-native-screens": "^3.29.0",
+    "react-native-share": "^10.0.2",
+    "react-native-view-shot": "3.7.0",
     "react-native-web": "~0.19.6",
     "typed-async-storage": "^3.1.2"
   },
