support android and IOS simulator

--- a/eas.json
+++ b/eas.json
@@ -5,7 +5,16 @@
   "build": {
     "development": {
       "developmentClient": true,
-      "distribution": "internal"
+      "distribution": "internal",
+      "ios":{
+        "simulator": true
+      }
+    },
+    "development-simulator":{
+      "extends":"development",
+      "ios":{
+        "simulator": true
+      }
     },
     "preview": {
       "distribution": "internal"
